# scriba

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: scriba_dsl_specs.txt
examples/: CMakeLists.txt
examples/file_io/: CMakeLists.txt  main.cpp  test.scriba
include/scriba/: environment.h  evaluator.h  keywords.h  object.h  parser.h  scanner.h  script_instance.h  scriptinstance.h  storagemanager.h  token.h  token_type.h  type_registry.h  value.h
include/scriba/ast/: and_expression.h  array_literal_expression.h  assignment_statement.h  binary_expression.h  block_statement.h  call_expression.h  command_statement.h  event_block.h  event_statement.h  expression.h  grouping_expression.h  identifier_expression.h  if_statement.h  literal_expression.h  member_expression.h  or_expression.h  range_expression.h  statement.h  trigger_expression.h  trigger_statement.h  unary_expression.h
include/scriba/errors/: parse_error.h  runtime_error.h  scanner_error.h
project/: scriba.sln
project/scriba/: scriba.vcxproj  scriba.vcxproj.filters
src/: environment.cpp  evaluator.cpp  parser.cpp  scanner.cpp  script_instance.cpp  scriptinstance.cpp  storage_manager.cpp  storagemanager.cpp  token.cpp  type_registry.cpp
tests/: CMakeLists.txt  ast_printer.cpp  ast_printer.h  evaluator_tests.cpp  expression_tests.cpp  parser_tests.cpp  scanner_tests.cpp  test_main.cpp  test_utils.cpp  test_utils.h
